alignment andd location

--- a/general/JosephVitaResume.tex
+++ b/general/JosephVitaResume.tex
@@ -27,11 +27,13 @@
   \email{jcvita2012@gmail.com}
   \phone{631-834-8067}
 %  \mailaddress{Address, Street, 00000 County}
-%  \location{}
+  \location{Rochester, NY}
   \github{www.github.com/Jcvita}
 %  \homepage{example.com/}
 %  \twitter{@joe_life}
-  \linkedin{https://www.linkedin.com/in/joseph-vita-082b32191/}
+  \newline
+  \linkedin{https://www.linkedin.com/in/joseph-vita-082b32191/
+  }
 }
 
 %% Make the header extend all the way to the right, if you want.
