--- a/general/page1sidebar.tex
+++ b/general/page1sidebar.tex
@@ -1,4 +1,3 @@
-
 \cvsection{Education}
 \cvevent{Computing Security - 3.03 GPA}{Rochester Institute of Technology}{ August 2019 -- May 2023}{}
 \cvevent{Active Voting Member}{RIT's Computer Science House}{ August 2019 - Current }{}
@@ -21,7 +20,8 @@
 \end{itemize}
 
 %\divider
-
+\smallskip
+\smallskip
 \cvsection{Relevant \newline Coursework}
 \smallskip
 \begin{itemize}
