alignment and rewording

--- a/general/JosephVitaResume.tex
+++ b/general/JosephVitaResume.tex
@@ -53,7 +53,7 @@
 \begin{itemize}
 \item Using Python libraries such as TA-Lib to generate graphs and statistics of real time stock data
 \smallskip
-\item Collaborating with a small group using Git
+\item Collaborating with a small group in an enterprise-grade environment using Git
 \smallskip
 \item Using machine learning frameworks such as Tensorflow to learn trends and predict buy/sell points in the market and add weights and biases based on updated news trends.
 \smallskip
@@ -67,7 +67,7 @@
 \smallskip
 \item Used the Tesseract API to run OCR on the snipped images
 \smallskip
-\item Created a tool that myself and others use on a daily basis and works more efficiently than Microsoft's current snipping tool
+\item Created and currently maintaining a tool that myself and others use on a daily basis and works more efficiently than Microsoft's current snipping tool
 \end{itemize}
 \smallskip
 \smallskip
@@ -90,6 +90,7 @@
 \item Taught myself the basics of machine learning and convolutional neural networks
 \smallskip
 \item Learned how to understand large dataset collection and classification 
+\smallskip
 \end{itemize}
 \cvproject{}
 
@@ -99,7 +100,6 @@
 \item Python, Java, C\#, C, Javascript, Jquery \& AJAX, Flask, HTML5, CSS, Node.js
 \smallskip
 \item Git and Github, Microsoft Windows, Office,  Visual Studio, Ubuntu, Kali, Bash, Docker, Docker-Compose, MongoDB
-\smallskip
 \end{itemize}
 
 %\cvsection{PERSONAL SKILLS}
@@ -129,3 +129,4 @@
 
 
 \end{document}
+
