--- a/general/page1sidebar.tex
+++ b/general/page1sidebar.tex
@@ -1,27 +1,26 @@
 \cvsection{Education}
-\cvevent{Computing Security - 3.03 GPA}{Rochester Institute of Technology}{ August 2019 -- May 2023}{}
+\cvevent{Computing Security BS - 3.03 GPA}{Rochester Institute of Technology}{ August 2019 -- May 2023}{}
 \cvevent{Active Voting Member}{RIT's Computer Science House}{ August 2019 - Current }{}
-\cvevent{High School}{Connetquot High School}{ September 2015 - June 2019 }{}
 
 \cvsection{Experience}
 
 \cvevent{Intern}{SUNation Solar Systems}{June 2019 -- Aug 2019}{Bohemia, NY}
 \begin{itemize}
-\item Assisted in managing a database of sensitive customer information as well as classifying customer documents through Salesforce.
-\smallskip
-\item Automated the process of filling in missing information on sales records and panel installation data 
+\item Organized and digitized a database of sensitive customer information as well as classifying customer documents in a timely manor through Salesforce.
+\item Automated the process of filling in missing information on sales records and panel installation data using Google Apps Script to save time and ensure data integrity
 \end{itemize}
 
 \divider
 
-\cvevent{Cashier}{Wendy's Corporation}{Sept. 2017 - Nov. 2018}{Oakdale, NY}
+\cvevent{Programming Captain}{FIRST Robotics Championship}{Sept. 2017 - Apr. 2019}{Bohemia, NY}
 \begin{itemize}
-\item Took orders, handled money, worked with POS software, and helped customers under stressful time-sensitive conditions
+\item Lead a team of programmers to write the Java code for a remote control tank-drive style robot using PWM VictorSPX motor controllers
+\item Taught aspiring, inexperienced students the fundamentals of object oriented programming, writing code in Java and using external libraries while ensuring our code stayed neat, efficient and consistent. 
 \end{itemize}
 
+\vspace{.075in}
+
 %\divider
-\smallskip
-\smallskip
 \cvsection{Relevant \newline Coursework}
 \smallskip
 \begin{itemize}
