Post-carrier update

--- a/general/JosephVitaResume.tex
+++ b/general/JosephVitaResume.tex
@@ -49,15 +49,27 @@
 %% not need to align the top of the contents to any
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Projects}
-\cvproject{Python stock data collector and analyzer}
+\cvproject{Autovester}
 \begin{itemize}
-\item Using Python libraries such as TA-Lib to generate graphs and statistics of real time stock data
+\item Learning data science techniques and machine learning fundamentals to algorithmically trade stocks, cryptocurrencies and understand movement patterns of the options market
 \smallskip
-\item Collaborating with a small group in an enterprise-grade environment using Git
+\item Collecting sentiment and quantitive data by the second from Robinhood's API and storing it on a self hosted database server
 \smallskip
-\item Using machine learning frameworks such as Tensorflow to learn trends and predict buy/sell points in the market and add weights and biases based on updated news trends.
+\item Created a terminal/API interface for robinhood to track live price data for symbols, implement a take profit/stop loss trading feature and make trades quicker via the command line 
 \smallskip
-\item Using Docker to create optimized environments for MongoDB and Flask services
+\item Working on a database schema of technical indicators to track from a stock's live and historical price that would allow an algorithm to detect patterns that indicate a coming sell off or buying spree
+\end{itemize}
+\smallskip
+\smallskip
+\cvproject{EssayAway}
+\begin{itemize}
+\item GPT-3 powered essay writing assistant
+\smallskip
+\item Working on a self hosted SaaS web app where a user puts in an essay topic and a fine tuned GPT-3 instance creates a guide for the topic and begins writing paragraphs based off the guide. 
+\smallskip
+\item Planning on launching this product as an educational subscription service and scaling a self hosted datacenter to sture user data, business data and model training/fine tuning data
+\smallskip
+\item Using Node and express with MongoDB as a backend, and HTML/CSS/JS and SASS as a frontend. 
 \end{itemize}
 \smallskip
 \smallskip
@@ -67,39 +79,42 @@
 \smallskip
 \item Used the Tesseract API to run OCR on the snipped images
 \smallskip
-\item Created and currently maintaining a tool that myself and others use on a daily basis and works more efficiently than Microsoft's current snipping tool
+\item Created and currently maintaining a tool that I use on a daily basis and builds upon the lackluster feature set of Microsoft's current snipping tool
 \end{itemize}
 \smallskip
 \smallskip
-\cvproject{AutoDJ}
-\begin{itemize}
-\item Kahoot-style voting software for music selection tailored towards large groups
-\smallskip
-\item Collaborated with a small group using Git to build a full stack application
-\smallskip
-\item Worked with backend libraries such as Node.js and Express
-\smallskip
-\item Managing server hardware to set up working environments for MongoDB
-\end{itemize}
 \smallskip
 \smallskip
-\cvproject{Handwritten Digit Classifier}
-\begin{itemize}
-\item Used TensorFlow and Keras to classify handwritten digits in 28x28 images with a ~95\% accuracy
 \smallskip
-\item Taught myself the basics of machine learning and convolutional neural networks
 \smallskip
-\item Learned how to understand large dataset collection and classification 
 \smallskip
-\end{itemize}
-\cvproject{}
+\smallskip
+\smallskip
+\smallskip
+\smallskip
+\smallskip
+\smallskip
+\smallskip
+
+% \cvproject{Handwritten Digit Classifier}
+% \begin{itemize}
+% \item Used TensorFlow and Keras to classify handwritten digits in 28x28 images with a ~95\% accuracy
+% \smallskip
+% \item Taught myself the basics of machine learning and convolutional neural networks
+% \smallskip
+% \item Learned how to understand large dataset collection and classification 
+% \smallskip
+% \end{itemize}
+% \cvproject{}
 
 \cvsection{TECHNICAL SKILLS}
 \smallskip
 \begin{itemize}
-\item Python, Java, C\#, C, Javascript, Jquery \& AJAX, Flask, HTML5, CSS, Node.js
+\item Python, Pandas, Node.js, Express, MongoDB, Redis Javasript, Jquery \& AJAX, Flask, HTML5, CSS, Java, C\#, C, X86 Assembly
 \smallskip
-\item Git and Github, Microsoft Windows, Office,  Visual Studio, Ubuntu, Kali, Bash, Docker, Docker-Compose, MongoDB
+\item Git and Github, Microsoft Windows, Office, Visual Studio, Ubuntu, Kali
+\smallskip
+\item Bash, Docker, Docker-Compose, Virtualization and LXC containers, Systemd, Proxmox, MySQL
 \end{itemize}
 
 %\cvsection{PERSONAL SKILLS}
@@ -129,4 +144,3 @@
 
 
 \end{document}
-
