--- a/general/page1sidebar.tex
+++ b/general/page1sidebar.tex
@@ -1,8 +1,16 @@
 \cvsection{Education}
-\cvevent{Computing Security BS - 3.03 GPA}{Rochester Institute of Technology}{ August 2019 -- May 2023}{}
-\cvevent{Active Voting Member}{RIT's Computer Science House}{ August 2019 - Current }{}
+\cvevent{Computing Security BS - 3.28 GPA}{Rochester Institute of Technology}{ August 2019 -- May 2023}{}
+\cvevent{Alumni}{RIT's Computer Science House}{ August 2019 - Current }{}
 
 \cvsection{Experience}
+
+\cvevent{QA/Cloud Automation Developer}{LenelS2}{Jan. 2021 - Aug. 2021}{Pittsford, NY}
+\begin{itemize}
+\item Wrote scripts to automate the testing of REST Authentication and a Node/Express/Azure backend on a fast pased AGILE team developing cloud access control software.
+\item Hardened the security of a node/C# side project by integrating TLS and an authentication scheme using a proprietary authentication server to a scenario simulator. 
+\end{itemize}
+
+\divider
 
 \cvevent{Intern}{SUNation Solar Systems}{June 2019 -- Aug 2019}{Bohemia, NY}
 \begin{itemize}
@@ -10,13 +18,6 @@
 \item Automated the process of filling in missing information on sales records and panel installation data using Google Apps Script to save time and ensure data integrity
 \end{itemize}
 
-\divider
-
-\cvevent{Programming Captain}{FIRST Robotics Championship}{Sept. 2017 - Apr. 2019}{Bohemia, NY}
-\begin{itemize}
-\item Lead a team of programmers to write the Java code for a remote control tank-drive style robot using PWM VictorSPX motor controllers
-\item Taught aspiring, inexperienced students the fundamentals of object oriented programming, writing code in Java and using external libraries while ensuring our code stayed neat, efficient and consistent. 
-\end{itemize}
 
 \vspace{.075in}
 
@@ -31,5 +32,8 @@
 \item Systems Administration I
 \smallskip
 \item Routing \& Switching I
+\smallskip
+\item Intro to Database Systems
+\smallskip
+\item Reverse Engineering Fundamentals
 \end{itemize}
-
