--- a/general/JosephVitaResume.tex
+++ b/general/JosephVitaResume.tex
@@ -63,11 +63,11 @@
 \smallskip
 \cvproject{EssayAway}
 \begin{itemize}
-\item GPT-3 powered essay writing assistant
+% \item GPT-3 powered essay writing assistant
+% \smallskip
+\item Working on a self-hosted SaaS web app where a user puts in an essay topic and a fine tuned GPT-3 instance creates a guide for the topic and begins writing paragraphs based off the guide. 
 \smallskip
-\item Working on a self hosted SaaS web app where a user puts in an essay topic and a fine tuned GPT-3 instance creates a guide for the topic and begins writing paragraphs based off the guide. 
-\smallskip
-\item Planning on launching this product as an educational subscription service and scaling a self hosted datacenter to sture user data, business data and model training/fine tuning data
+\item Treating my in-house server as a cloud hypervisor to incorporate deployment, vertical and horizontal scaling, data redundancy, containerization and other cloud features to learn how the cloud works under the hood and cut costs
 \smallskip
 \item Using Node and express with MongoDB as a backend, and HTML/CSS/JS and SASS as a frontend. 
 \end{itemize}
@@ -107,14 +107,16 @@
 % \end{itemize}
 % \cvproject{}
 
+\vspace{.07in}
+
 \cvsection{TECHNICAL SKILLS}
 \smallskip
 \begin{itemize}
-\item Python, Pandas, Node.js, Express, MongoDB, Redis Javasript, Jquery \& AJAX, Flask, HTML5, CSS, Java, C\#, C, X86 Assembly
+\item Python, Pandas, Node.js, Express, Jest, Jquery \& AJAX, Flask, HTML5, CSS, Java, C\#, C, X86 Assembly
 \smallskip
-\item Git and Github, Microsoft Windows, Office, Visual Studio, Ubuntu, Kali
+\item Git and Github, Microsoft Azure, Azure Devops, Microsoft Windows
 \smallskip
-\item Bash, Docker, Docker-Compose, Virtualization and LXC containers, Systemd, Proxmox, MySQL
+\item Ubuntu, Bash, Proxmox, MongoDB, MySQL, Redis, Docker, Docker-Compose, Virtualization and LXC containers
 \end{itemize}
 
 %\cvsection{PERSONAL SKILLS}
@@ -141,6 +143,5 @@
 % %% sidebar a bit so that it looks aligned with the top of the
 % %% main column.
 % % \addnextpagesidebar[-1ex]{page3sidebar}
-
 
 \end{document}
