--- a/security/JosephVitaResume.tex
+++ b/security/JosephVitaResume.tex
@@ -101,7 +101,7 @@
 \smallskip
 \item Cybersecurity Policy and Law, Technical Communications
 \smallskip
-\item Computer Science II, Programming for Information Security
+\item CSII, Programming for Info Sec, Web App Security
 \smallskip
 \item Systems Administration, Routing \& Switching
 \smallskip
